[tool.poetry]
name = "ia-academica"
version = "0.1.0"
description = ""
authors = ["Victor Ribeiro <victorcesargomesribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
openai = "^1.57.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
